[package]
name = "wasm-replay-parser-rs"
version = "0.2.0"
authors = ["riesha <seleneia@outlook.jp>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
console_error_panic_hook = { version = "0.1.7", optional = true }
lzma-rs = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.0"
serde_json = { version = "1.0.103"}
bitflags = { version = "2.3.3", features = ["serde"] }
thiserror = "1.0.43"
byteorder = "1.5.0"
itertools = "0.11.0"
rosu-pp = "0.9.4"
tsify = { version = "0.4.5", features = ["js"] }
libosu = { git = "https://github.com/Corsace/libosu", features = ["serde"] }
md5 = "0.7.0"
js-sys = "0.3.64"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
lto = true
opt-level = 3